--- a/presentació1.html
+++ b/presentació1.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
    <!--<title>Exemple d'HTML5</title>-->
-    <img src="logo.png" alt="Logo"> 
+    <img src="logo.png.png" alt="Logo"> 
     <a href="https://es.linkedin.com/" target="_blank">
         <img src="linkedin-icon.png" alt="LinkedIn">
       </a>
   </head>
   <body>
-    <h1></h1>
+    <h1> Presentació </h1>
+    <p> El meu nom es </p>
     
 
   </body>
