--- a/practiques/practica1/practiques.html
+++ b/practiques/practica1/practiques.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-<html lang="ca">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-   <!--<title>Exemple d'HTML5</title>-->
-    <img src="logo.png" alt="Logo"> 
-    <a href="https://es.linkedin.com/" target="_blank">
-        <img src="linkedin-icon.png" alt="LinkedIn">
-      </a>
-  </head>
-  <body>
-    <h1></h1>
-    
-
-  </body>
+    <title>Practica 01</title>
+    <link rel="stylesheet" href="cssp1.css">
+</head>
+<body>
+    <header>
+        <!--contenidor, per separar per grups -->
+        <div class="header-logo">
+            <!-- imatge -->
+            <img src="img/logo.png" alt="Logo web" >
+        </div>
+        <div class="header-xarxes">
+            <!-- afegir un link -->
+            <a href="https://es.linkedin.com/" target="_blank">
+                LinkedIn
+                <img src="img/linkedin.png" alt="Logo LinkedIn">
+            </a>
+            <a href="https://x.com/" target="_blank">
+                X
+                <img src="img/x.png" alt="Logo x">
+            </a>
+            <a href="https://youtube.com/" target="_blank">
+                Youtube
+                <img src="img/youtube.png" alt="Logo youtube">
+            </a>
+        </div>
+        <nav>
+            <a href="practica1.html">Inici</a>
+            <a href="presentacio.html">Presentacio</a>
+            <a href="practiques.html">Practiques</a>
+            <a href="cv.html">CV</a>
+            <a href="contacte.html">Contacte</a>
+        </nav>
+    </header>
+    <footer>
+      <div>
+        <div class="header-logo">
+          <!-- imatge -->
+          <img src="img/logo.png" alt="Logo web" >
+      </div>
+        <nav>
+          <a href="index.html">Inici</a>
+          <a href="presentacio.html">Presentació</a>
+          <a href="practiques.html">Pràctiques</a>
+          <a href="cv.html">CV</a>
+          <a href="contacte.html">Contacte</a>
+        </nav>
+      </div>
+      <p><a href="sitemap.xml">Mapa Web</a></p>
+      <p>© 2024 Projecte Asix html. Tots els drets reservats</p>
+    </footer>
+</body>
 </html>
