--- a/practiques/practica1/contacte.html
+++ b/practiques/practica1/contacte.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <nav>
-            <a href="practica1.html">Inici</a>
+            <a href="contacte.html">Inici</a>
             <a href="presentacio.html">Presentacio</a>
             <a href="practiques.html">Practiques</a>
             <a href="cv.html">CV</a>
